--- a/index.html
+++ b/index.html
@@ -453,6 +453,22 @@
                     </div>
                 </div> -->
                 <!-- Correo Electrónico -->
+                <!-- freelancer -->
+                <div class="contacto card">
+                    <div class="card-body">
+                        <i class="icono">
+                            <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="m14.096 3.076 1.634 2.292L24 3.076M5.503 20.924l4.474-4.374-2.692-2.89m6.133-10.584L11.027 5.23l4.022.15M4.124 3.077l.857 1.76 4.734.294m-3.058 7.072 3.497-6.522L0 5.13m7.064 7.485 3.303 3.548 3.643-3.57 1.13-6.652-4.439-.228z"/>
+                            </svg>
+                        </i>
+                        <h4 class="card-title">Este es mi perfil de Freelancer.</h4>
+                        <div class="boton_sin_subrayado">
+                            <a href="https://www.freelancer.com/u/Sergiom75" target="_blank">
+                                <button class="btn pulse-effect">Ir a Freelancer</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="contacto card">
                     <div class="card-body">
                         <i class="icono">
@@ -544,6 +560,16 @@
                         </i>
                     </a>
                 </div>
+                 <!-- Freelancer -->
+                <!-- <div class="contact ms-3">
+                    <a href="https://www.freelancer.com/u/Sergiom75" target="_blank">
+                        <i class="icono">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="m14.096 3.076 1.634 2.292L24 3.076M5.503 20.924l4.474-4.374-2.692-2.89m6.133-10.584L11.027 5.23l4.022.15M4.124 3.077l.857 1.76 4.734.294m-3.058 7.072 3.497-6.522L0 5.13m7.064 7.485 3.303 3.548 3.643-3.57 1.13-6.652-4.439-.228z"/>
+                            </svg>
+                        </i>
+                    </a>
+                </div> -->
                 <!-- Github -->
                 <!-- <div class="contact ms-3">
                     <a href="https://github.com/sergiomtod" target="_blank">
