desabilitado el link a freelancer

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 </div> -->
                 <!-- Correo Electrónico -->
                 <!-- freelancer -->
-                <div class="contacto card">
+                <!-- <div class="contacto card">
                     <div class="card-body">
                         <i class="icono">
                             <svg width="50" height="50" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -468,7 +468,8 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
+                <!-- e mail -->
                 <div class="contacto card">
                     <div class="card-body">
                         <i class="icono">
