--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <!-- Meta tags -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Sergio Todaro" />
-    <meta name="description" content="Currículum vitae de un desarrollador web." />
-    <meta name="keywords" content="html, html5, css, css3, JavaScript, java, php, Mysql, Desarrollo, web, developer" />
-    <!-- Título -->
-    <title>Soy Sergio | Desarrollador web</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="img/logo/favicon.svg" />
-    <!-- Preconnect para optimización de fuentes -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- Google Fonts Optimized: Cargar todas las fuentes en una sola solicitud -->
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Questrial&family=Rubik+Marker+Hatch&family=Rubik+Doodle+Shadow&family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
-    <!-- CSS de Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- CSS personalizados -->
-    <link rel="stylesheet" href="css/header_cielo.css" />
-    <link rel="stylesheet" href="css/menu.css" />
-    <link rel="stylesheet" href="css/estilo_principal.css" />
-</head> 
+    <head>
+        <!-- Meta tags -->
+        <meta charset="UTF-8" />
+        <meta http-equiv="Content-Language" content="es" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Sergio Todaro" />
+        <meta name="description" content="Soy Sergio, desarrollador web especializado en HTML, CSS, JavaScript y más. Conoce mis habilidades y proyectos." />
+        <meta name="keywords" content="Sergio Todaro, desarrollador web, frontend, HTML, CSS, JavaScript, PHP, MySQL, portfolio, web developer" />
+        <meta name="robots" content="index, follow" />
+        <meta property="og:site_name" content="Soy Sergio" />
+        <meta property="og:title" content="Soy Sergio | Desarrollador Web" />
+        <meta property="og:description" content="Soy Sergio, desarrollador web especializado en HTML, CSS, JavaScript y más. Conoce mis habilidades y proyectos." />
+        <meta property="og:image" content="https://sergiowebdeveloper.com/img/logo/sergio_web_developer.jpg" />
+        <meta property="og:url" content="https://sergiowebdeveloper.com" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Soy Sergio | Desarrollador Web" />
+        <meta name="twitter:description" content="Soy Sergio, desarrollador web especializado en HTML, CSS, JavaScript y más. Conoce mis habilidades y proyectos." />
+        <meta name="twitter:image" content="https://sergiowebdeveloper.com/img/logo/sergio_web_developer.jpg" />
+        <link rel="canonical" href="https://sergiowebdeveloper.com" />
+
+        <!-- Título -->
+        <title>Soy Sergio | Desarrollador Web</title>
+        <!-- Favicon -->
+        <link rel="icon" type="image/svg+xml" href="img/logo/favicon.svg" />
+        <!-- Preconnect para optimización de fuentes -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <!-- Google Fonts Optimized -->
+        <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Questrial&family=Rubik+Marker+Hatch&family=Rubik+Doodle+Shadow&family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
+        <!-- CSS de Bootstrap -->
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <!-- CSS personalizados -->
+        <link rel="stylesheet" href="css/header_cielo.css" />
+        <link rel="stylesheet" href="css/menu.css" />
+        <link rel="stylesheet" href="css/estilo_principal.css" />
+    </head>
+    
 <body>
     <div class="content-fluid">
     <!-- seccion inicio -->
@@ -553,9 +569,10 @@
             <div class="col-md-6 d-flex align-items-center justify-content-end">
                 <!-- LinkedIn -->
                 <div class="contact ms-3">
-                    <a href="https://www.linkedin.com/in/sergiom-tod/" target="_blank">
+                    <a href="https://www.linkedin.com/in/sergiom-tod/" aria-label="Visita mi perfil de LinkedIn" target="_blank">
                         <i class="icono">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"  class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <title>Visita mi perfil de LinkedIn</title>
                                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                               </svg>
                         </i>
@@ -563,9 +580,10 @@
                 </div>
                  <!-- Freelancer -->
                 <!-- <div class="contact ms-3">
-                    <a href="https://www.freelancer.com/u/Sergiom75" target="_blank">
+                    <a href="https://www.freelancer.com/u/Sergiom75" aria-label="Visita mi perfil de Freelancer" target="_blank">
                         <i class="icono">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <title>Visita mi perfil de Freelancer</title>
                                 <path d="m14.096 3.076 1.634 2.292L24 3.076M5.503 20.924l4.474-4.374-2.692-2.89m6.133-10.584L11.027 5.23l4.022.15M4.124 3.077l.857 1.76 4.734.294m-3.058 7.072 3.497-6.522L0 5.13m7.064 7.485 3.303 3.548 3.643-3.57 1.13-6.652-4.439-.228z"/>
                             </svg>
                         </i>
@@ -573,9 +591,10 @@
                 </div> -->
                 <!-- Github -->
                 <!-- <div class="contact ms-3">
-                    <a href="https://github.com/sergiomtod" target="_blank">
+                    <a href="https://github.com/sergiomtod" aria-label="Visita mis repositorios en GitHub" target="_blank">
                         <i class="icono">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                <title>Visita mis repositorios en GitHub</title>
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                             </svg>
                         </i>
@@ -583,9 +602,10 @@
                 </div> -->
                 <!-- telefono -->
                 <div class="contact ms-3">
-                    <a href="tel:+34641880575">
+                    <a href="tel:+34641880575" aria-label="Llama a Sergio Todaro al +34641880575">
                         <i class="icono">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-telephone-forward-fill" viewBox="0 0 16 16">
+                                <title>Llama a Sergio Todaro al +34641880575</title>
                                 <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zm10.761.135a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 0 1-.708-.708L14.293 4H9.5a.5.5 0 0 1 0-1h4.793l-1.647-1.646a.5.5 0 0 1 0-.708"/>
                             </svg>
                         </i>
@@ -593,8 +613,9 @@
                 </div>
                 <!-- mail -->
                 <div class="contact ms-3">
-                    <a href="mailto:contacta@sergiowebdeveloper.com?subject=He%20visto%20tu%20web%20y%20quiero%20hablar%20contigo">
+                    <a href="mailto:contacta@sergiowebdeveloper.com?subject=He%20visto%20tu%20web%20y%20quiero%20hablar%20contigo" aria-label="Envia un correo electrónico a Sergio Todaro">
                         <i class="icono">
+                            <title>Envia un correo electrónico a Sergio Todaro</title>
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
                                 <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2zm-2 9.8V4.698l5.803 3.546zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.5 4.5 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586zM16 9.671V4.697l-5.803 3.546.338.208A4.5 4.5 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671"/>
                                 <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791"/>
@@ -604,9 +625,10 @@
                 </div>
                 <!-- WhatsApp -->
                 <div class="contact ms-3">
-                    <a href="https://wa.me/34641880575" target="_blank">
+                    <a href="https://wa.me/34641880575" aria-label="Envia un mensaje de WhatsApp a Sergio Todaro" target="_blank">
                         <i class="icono">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                                <title>Envia un mensaje de WhatsApp a Sergio Todaro</title>
                                 <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
                             </svg>
                         </i>
